@@ -1,2 +1,4 @@
 - Merged latest ALS.
-- Stability improvements.
+- A different thermal solution relying on in-kernel driver (by Sultan Alsawaf with my optimizations).
+- Reduced minimal frequency of little cores to 1056 MHz and increased up_rate_limit_us, should increase battery life.
+- Fixed a FOD related memory corruption.
